name:                   concurrent-ordered-set
version:                0.1
homepage:               https://github.com/adaszko/concurrent-ordered-set
cabal-version:          >= 1.10
build-type:             Simple
license:                BSD3
license-file:           LICENSE
author:                 Adam Szkoda
extra-source-files:     README.md LICENSE
stability:              experimental
bug-reports:            https://github.com/adaszko/concurrent-ordered-set/issues
category:               Concurrency
synopsis:               A lock-free concurrent set implementation
description:            A lock-free concurrent set implementation based on skip lists and atomicModifyIORef.

flag developer
    description:        developer mode
    default:            False

source-repository       head
    type:               git
    location:           git://github.com/adaszko/concurrent-ordered-set.git

library
    build-depends:      base,
                        random,
                        vector,
                        markable-ioref
    ghc-options:        -threaded -rtsopts -Wall -O2

    if flag(developer)
        ghc-options: -Werror

    exposed-modules:    Data.Concurrent.OrderedSet
    default-language:   Haskell2010
    hs-source-dirs:     src

test-suite              Main
    type:               exitcode-stdio-1.0
    build-depends:      base,
                        random,
                        QuickCheck >= 2.0,
                        test-framework,
                        test-framework-quickcheck2,
                        concurrent-ordered-set
    ghc-options:        -threaded -rtsopts -Wall

    if flag(developer)
        ghc-options: -Werror

    hs-source-dirs:     test
    main-is:            Main.hs
    default-language:   Haskell2010

benchmark               bench-set
    type:               exitcode-stdio-1.0
    hs-source-dirs:     . bench
    ghc-options:        -threaded -rtsopts -Wall

    if flag(developer)
        ghc-options: -Werror

    main-is:            Main.hs
    build-depends:      base,
                        random,
                        containers,
                        criterion,
                        concurrent-ordered-set
    default-language:   Haskell2010
